---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- Binary:
    op:
      - Add
      - start: 2
        end: 3
    left:
      - Variable: a
      - start: 0
        end: 1
    right:
      - Binary:
          op:
            - Mul
            - start: 19
              end: 20
          left:
            - Function:
                Generic:
                  name:
                    - my_udf
                    - start: 5
                      end: 11
                  args:
                    - - Variable: a
                      - start: 13
                        end: 14
                    - - Variable: b
                      - start: 16
                        end: 17
            - start: 5
              end: 18
          right:
            - Function:
                Numeric:
                  Absolute:
                    - Unary:
                        op:
                          - Minus
                          - start: 25
                            end: 26
                        child:
                          - Variable: c
                          - start: 26
                            end: 27
                    - start: 25
                      end: 27
            - start: 21
              end: 28
      - start: 4
        end: 29
- start: 0
  end: 29
